# fall-of-nouraajd

./: .clang-format  .cproject.REMOVED.git-id  .gitattributes  .gitconfig  .gitignore  .gitmodules  7za.exe.REMOVED.git-id  AGENTS.md  CAnimatedObject.cpp  CAnimatedObject.h  CAnimationProvider.cpp  CAnimationProvider.h  CBuilding.cpp  CBuilding.h  CCast.h  CConfigurationProvider.cpp  CCreature.cpp.REMOVED.git-id  CCreature.h.REMOVED.git-id  CDefines.h  CEventHandler.cpp  CEventHandler.h  CGame.cpp  CGame.h  CGameLoader.cpp  CGameLoader.h  CGamePanel.cpp.REMOVED.git-id  CGamePanel.h  CGamePanel.h.REMOVED.git-id  CGameScene.cpp  CGameScene.h  CGameScript.cpp  CGameView.cpp  CGameView.h  CGlobal.h  CGuiHandler.cpp  CGuiHandler.h  CInteraction.cpp  CInteraction.cpp.REMOVED.git-id  CInteraction.h  CItem.cpp  (+134 more)
.github/: multi-workbook-inspection.txt
android/: posix.c.REMOVED.git-id  posix.h
animation/: animatedobject.cpp  animatedobject.h  animation.cpp  animation.h  animationprovider.cpp  animationprovider.h
base64/: base64.cpp  base64.cpp.REMOVED.git-id  base64.h
buildings/: building.cpp  building.h  cave.cpp  cave.h  dungeon.cpp  dungeon.h  teleporter.cpp  teleporter.h
cmake/: FindJsonCpp.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  cotire.cmake
compression/: compression.cpp  compression.h  minizip.h.REMOVED.git-id
config/: armors.json  buildings.json  creatures.json.REMOVED.git-id  effects.json  init.json  interactions.json  interactions.json.REMOVED.git-id  items.json  items.json.REMOVED.git-id  map.json  map.json.REMOVED.git-id  map.tmx.REMOVED.git-id  misc.json  monsters.json  monsters.json.REMOVED.git-id  object.json.REMOVED.git-id  potions.json  slots.json  spritesheet.png.REMOVED.git-id  tiles.json  weapons.json  weapons.json.REMOVED.git-id
configuration/: configurationprovider.cpp  configurationprovider.h
controller/: CController.cpp  CController.h  CControllers.h  CTargetController.cpp  CTargetController.h
core/: CDefines.h  CGame.cpp  CGame.h  CGlobal.h  CJsonUtil.cpp  CJsonUtil.h  CMain.cpp  CMap.cpp  CMap.h  CPathFinder.cpp  CPathFinder.h  CSerialization.cpp  CSerialization.h  CStats.cpp  CStats.h  CTypes.cpp  CTypes.h  CUtil.cpp  CUtil.h  core.pro
creatures/: creature.cpp  creature.cpp.REMOVED.git-id  creature.h  monster.cpp  monster.h  player.cpp  player.cpp.REMOVED.git-id  player.h
debug/: Game.exe.REMOVED.git-id  animatedobject.o.REMOVED.git-id  animation.o.REMOVED.git-id  animationprovider.o.REMOVED.git-id  armor.o.REMOVED.git-id  building.o.REMOVED.git-id  cave.o.REMOVED.git-id  compression.o.REMOVED.git-id  configurationprovider.o.REMOVED.git-id  coords.o.REMOVED.git-id  creature.o.REMOVED.git-id  damage.o.REMOVED.git-id  destroyer.o.REMOVED.git-id  dungeon.o.REMOVED.git-id  fightview.o.REMOVED.git-id  gamescene.o.REMOVED.git-id  gameview.o.REMOVED.git-id  interaction.o.REMOVED.git-id  item.o.REMOVED.git-id  json_reader.o.REMOVED.git-id  json_value.o.REMOVED.git-id  json_writer.o.REMOVED.git-id  listitem.o.REMOVED.git-id  main.o.REMOVED.git-id  map.o.REMOVED.git-id  moc_animatedobject.o.REMOVED.git-id  monster.o.REMOVED.git-id  player.o.REMOVED.git-id  playeranimation.o.REMOVED.git-id  playerlistview.o.REMOVED.git-id  playerstatsview.o.REMOVED.git-id  potion.o.REMOVED.git-id  scrollobject.o.REMOVED.git-id  stats.o.REMOVED.git-id  tile.o.REMOVED.git-id  tower.o.REMOVED.git-id  town.o.REMOVED.git-id  weapon.o.REMOVED.git-id
destroyer/: destroyer.cpp  destroyer.h
docs/: art_manifest.json  codebase-cleanup-plan.md  codex-agent-queue.md  codex-workflow-observations.md  content.md  multi-workbook-queue.md  native-plugins.md  navigation.md  nouraajd-economy.md  object-comparison-semantics.md  testing.md  todo-worklog.md
effects/: abyssalshadowseffect.cpp  abyssalshadowseffect.h  armorofendlesswintereffect.cpp  armorofendlesswintereffect.h  damageovertime.cpp  damageovertime.h  effect.cpp  effect.h  endlesspaineffect.cpp  endlesspaineffect.h  stun.cpp  stun.h
game/: CAnimatedObject.cpp  CAnimatedObject.h  CAnimation.cpp  CAnimation.h  CAnimationProvider.cpp  CBuilding.cpp  CBuilding.h  CConfigurationProvider.cpp  CCreature.cpp.REMOVED.git-id  CCreature.h.REMOVED.git-id  CGamePanel.cpp.REMOVED.git-id  CGamePanel.h  CGameScene.cpp  CGameScene.h  CGameView.cpp  CGameView.h  CGuiHandler.cpp  CGuiHandler.h  CInteraction.cpp.REMOVED.git-id  CInteraction.h  CItem.cpp.REMOVED.git-id  CLootProvider.cpp  CLootProvider.h  CMain.cpp  CMainWindow.cpp  CMap.cpp.REMOVED.git-id  CMap.h  CMapObject.cpp  CMapObject.h  CObjectHandler.cpp.REMOVED.git-id  CObjectHandler.h  CPathFinder.h  CPlayerView.cpp.REMOVED.git-id  CPlayerView.h  CReflection.h  CResourcesHandler.cpp  CScriptEngine.cpp  CScriptEngine.h  CTile.h  GameScript.cpp.REMOVED.git-id  (+4 more)
git/: git.exe.REMOVED.git-id  libiconv-2.dll.REMOVED.git-id
gui/: CGameView.cpp  CGameView.h  CGui.h  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CPlayerView.cpp  CPlayerView.h  CScriptWindow.cpp  CScriptWindow.h  CScriptWindow.ui
handler/: CConfigHandler.cpp  CConfigHandler.h  CEventHandler.cpp  CEventHandler.h  CGuiHandler.cpp  CGuiHandler.h  CHandler.h  CLootHandler.cpp  CLootHandler.h  CMouseHandler.cpp  CMouseHandler.h  CObjectHandler.cpp  CObjectHandler.cpp.REMOVED.git-id  CObjectHandler.h  CQuestHandler.cpp  CQuestHandler.h  CResourcesHandler.cpp  CScriptHandler.cpp  CScriptHandler.h  CTypeHandler.cpp  CTypeHandler.h
handlers/: CGuiHandler.cpp  CObjectHandler.cpp.REMOVED.git-id
images/: item.png.REMOVED.git-id  loading.jpg.REMOVED.git-id
include/: zconf.h.REMOVED.git-id  zlib.h.REMOVED.git-id
interactions/: interaction.cpp  interaction.cpp.REMOVED.git-id  interaction.h
items/: armor.cpp  armor.h  belt.cpp  belt.h  boots.cpp  boots.h  gloves.cpp  gloves.h  helmet.cpp  helmet.h  item.cpp  item.h  lootprovider.cpp  lootprovider.h  potion.cpp  potion.h  smallweapon.cpp  smallweapon.h  weapon.cpp  weapon.h
json/: autolink.h  config.h  features.h  forwards.h  json.h  json_batchallocator.h.REMOVED.git-id  json_internalarray.inl.REMOVED.git-id  json_internalmap.inl.REMOVED.git-id  (+7 more)
(+1478 files in other folders)
